# health-bot

./: .gitignore  audit.md  audit2.py  check_config.py  database.db  docker.py  docker_command_run.txt  init_db.py  main.py  pyproject.toml  rough.py
chroma_db/: chroma.sqlite3
data/: .fitness_hash  fitness.jsonl
generator/: llm_interface.py  prompt_template.py
retriever/: embedder.py  sql_emb.py  vector_store.py
routes/: article_routes.py
tests/: test_integration.py
