[project]
name = "health-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.30.0",
    "nltk>=3.9.1",
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.1.0",
]
